@@ -1,11 +1,11 @@
 {
-  "count": 48,
+  "count": 44,
   "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 7,
-      "uniques": 4
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
